--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,10 @@ authors = ["genndy007 <kochevgenazp@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 pymongo = "^4.1.1"
+python-githooks = "^1.0.7"
 
 [tool.poetry.dev-dependencies]
+black = "^22.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
