--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["genndy007 <kochevgenazp@gmail.com>"]
 python = "^3.10"
 pymongo = "^4.1.1"
 python-githooks = "^1.0.7"
+python-dotenv = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
