--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["genndy007 <kochevgenazp@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-pymongo = "^4.1.1"
+pymongo = {extras = ["srv"], version = "^4.1.1"}
 python-githooks = "^1.0.7"
 python-dotenv = "^0.20.0"
 
