--- a/.githooks.ini
+++ b/.githooks.ini
@@ -1,7 +1,7 @@
 # to enable hooks run `githooks` on terminal
 
 [pre-commit]
-command = black --check .
+command = black --check $(git diff --cached --name-only | grep "\.py")
 
 [pre-push]
 command = black --check . && echo prepush
