--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,6 @@ black = "^22.3.0"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+include = '\.py'
