Trying to fix lint on commit

--- a/.githooks.ini
+++ b/.githooks.ini
@@ -1,7 +1,7 @@
 # to enable hooks run `githooks` on terminal
 
 [pre-commit]
-command = black --check $(git diff --cached --name-only | grep "\.py")
+command = sh `pwd`/lint-staged.sh
 
 [pre-push]
 command = black --check . && echo prepush
